--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>LinkedIn</title>
     <link rel="icon" href="photos\icons\5bukxbhy9xsil5mb7c2wulfbx.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <header>
@@ -87,16 +89,21 @@
 
     <div id="container">
         <div id="left-container">
-            <div>
-                <div>
-
+            <div class="profile">
+                <div class="dp-img">
+                    <img src="photos/icons/circle-user.png" alt="user-png" width="64" height="64" style="filter: invert(90%) sepia(100%) saturate(0%) hue-rotate(2000deg);" class="dp-png">
+                    <div class="text-box">
+                        <h4 id="username">
+                            Sreekrishnan T I
+                        </h4>
+                        <p id="des">
+                            Aspiring Full-Stack Developer | Photo & Video Editing | Passionate About Programming 
+                        </p>
+                        <p id="des1">
+                            Thrissur, Kerala
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div>
-
-            </div>
-            <div>
-
             </div>
         </div>
     </div>
